--- a/css/winestore.css
+++ b/css/winestore.css
@@ -46,11 +46,14 @@ div.sr {
 .error-report {
 	padding:10px;
 }
-.caption, .totop {
+.caption, .totop, .error-report {
 	padding:0 5px 0 5px;
 	font-size:16px;
 	line-height: 1;
 	color:#666;
+}
+.error-report {
+	padding-left:20px;
 }
 
 /* search form buttons */
